--- a/src/main/resources/static/frontframe/demo/list.html
+++ b/src/main/resources/static/frontframe/demo/list.html
@@ -135,7 +135,7 @@
 
             <th width="5%" param="{name:'yingjie',codeName:'whether'}">是否是应届</th>
 
-            <th width="5%" param="{name:'state',codeName:'state',render:'Render.customState'}">状态</th>
+            <!--<th width="5%" param="{name:'state',codeName:'state',render:'Render.customState'}">状态</th>-->
 
             <th width="10%" param="{name:'note'}">备注</th>
 
